<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#63D56E"
    tools:context="Fragments.ThirdFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newPassword"
        android:autofillHints="TODO"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <Button
        android:id="@+id/backToLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"
        android:backgroundTint="@color/white"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/back_to_login"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/showNewInfo"
        app:layout_constraintStart_toStartOf="@+id/showNewInfo"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <Button
        android:id="@+id/showNewInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="93dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="77dp"
        android:backgroundTint="@color/white"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:padding="10dp"
        android:text="@string/see_new_information"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backToLogin"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>